tests/NormalTests/paczka1/small_fuzzy/30944317.err
Error in line 1: pSaVu S202 61,4
Error in line 7: OsZ6NWaXU S202 45,4
